# GAME

./: .buildinfo  .dockerignore  .editorconfig  .env  .env.example  .env.integrated  .env.sample  .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  ERD-Documentation.MD  INITSTRATEGY.md  KUBERNETES_SETUP.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SETUP.md  TESTING.md  Untitled Diagram.drawio  alembic.ini  api.html  architecture.html  authentication.html  changelog.cz.toml  codebase.html  configuration.html  contributing.html  default_rule.json  default_strategy.json  deploy-kubernetes.sh  (+36 more)
.doctrees/: api.doctree  architecture.doctree  authentication.doctree  codebase.doctree  configuration.doctree  contributing.doctree  domain-model.doctree  dsl-engine.doctree  environment.pickle  getting-started.doctree  index.doctree  integrating.doctree  observability.doctree  operations.doctree  overview.doctree  rest-api.doctree  security.doctree  strategies.doctree  troubleshooting.doctree
.doctrees/UserGuide/: index.doctree
.doctrees/api/: app.doctree  app.engine.all_engine_strategies.doctree  app.engine.base_strategy.doctree  app.engine.check_base_strategy_class.doctree  app.engine.constantEffortStrategy.doctree  app.engine.default.doctree  app.engine.doctree  app.engine.dsl_ast.doctree  app.engine.dsl_execution_context.doctree  app.engine.dsl_interpreter.doctree  app.engine.dsl_metrics.doctree  app.engine.dsl_strategy.doctree  app.engine.dsl_validator.doctree  app.engine.getis_ord_gi_star.doctree  app.engine.greencrowdStrategy.doctree  app.engine.greengageStrategy.doctree  app.engine.socio_bee.doctree  app.engine.strategy_registry.doctree  app.main.doctree  app.middlewares.auth_context.doctree  app.middlewares.authentication.doctree  app.middlewares.doctree  app.middlewares.error_handler.doctree  app.middlewares.valid_access_token.doctree  app.model.abuse_limit_counter.doctree  app.model.api_key.doctree  app.model.api_requests.doctree  app.model.base_model.doctree  app.model.doctree  app.model.export_audit_log.doctree  app.model.game_params.doctree  app.model.games.doctree  app.model.kpi_metrics.doctree  app.model.logs.doctree  app.model.oauth_users.doctree  app.model.strategy_definition.doctree  app.model.strategy_execution_log.doctree  app.model.task_params.doctree  app.model.tasks.doctree  app.model.uptime_logs.doctree  (+67 more)
.doctrees/app/: app.doctree  app.endpoints.doctree  app.repository.doctree  app.services.doctree  modules.doctree
.doctrees/decisions/: 0001-internal-vs-external-ids.doctree  0002-append-only-wallet-ledger.doctree  0003-atomic-points-write.doctree  0004-idempotency-keys.doctree  0005-per-transaction-conversion-rate.doctree  0006-stable-strategy-ids.doctree  0007-dsl-sandbox.doctree  0008-draft-on-publish-versioning.doctree  0009-fail-fast-env-validation.doctree  0010-cors-wraps-error-catcher.doctree  0011-di-container-singleton-factory.doctree  0012-sqlite-tests-postgres-prod.doctree  0013-strategy-entrypoint-plugins.doctree  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
UserGuide/: index.html
_modules/: index.html
_sources/: architecture.rst.txt  authentication.rst.txt  codebase.rst.txt  contributing.rst.txt  domain-model.rst.txt  dsl-engine.rst.txt  getting-started.rst.txt  index.rst.txt  integrating.rst.txt  observability.rst.txt  overview.rst.txt  rest-api.rst.txt  security.rst.txt  strategies.rst.txt  troubleshooting.rst.txt
_static/: custom.css  documentation_options.js
api/: app.engine.all_engine_strategies.html  app.engine.base_strategy.html  app.engine.check_base_strategy_class.html  app.engine.constantEffortStrategy.html  app.engine.default.html  app.engine.dsl_ast.html  app.engine.dsl_execution_context.html  app.engine.dsl_interpreter.html  app.engine.dsl_metrics.html  app.engine.dsl_strategy.html  app.engine.dsl_validator.html  app.engine.getis_ord_gi_star.html  app.engine.greencrowdStrategy.html  app.engine.greengageStrategy.html  app.engine.html  app.engine.socio_bee.html  app.engine.strategy_registry.html  app.html  app.main.html  app.middlewares.auth_context.html  app.middlewares.authentication.html  app.middlewares.error_handler.html  app.middlewares.html  app.middlewares.valid_access_token.html  app.model.abuse_limit_counter.html  app.model.api_key.html  app.model.api_requests.html  app.model.base_model.html  app.model.export_audit_log.html  app.model.game_params.html  app.model.games.html  app.model.html  app.model.kpi_metrics.html  app.model.logs.html  app.model.oauth_users.html  app.model.strategy_definition.html  app.model.strategy_execution_log.html  app.model.task_params.html  app.model.tasks.html  app.model.uptime_logs.html  (+67 more)
app/: alembic_migration.sh  app.endpoints.html  app.html  app.repository.html  app.services.html  config.py  gunicorn_conf.py  main.py  modules.html  start-dev.sh  start-prod.sh
core/: config.py
coverage/: clover.xml
dashboard/: .env.sample  .eslintrc.js  .gitignore  .prettierrc.js  Dockerfile  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.mjs  vitest.config.mjs
decisions/: 0001-internal-vs-external-ids.html  0002-append-only-wallet-ledger.html  0003-atomic-points-write.html  0004-idempotency-keys.html  0005-per-transaction-conversion-rate.html  0006-stable-strategy-ids.html  0007-dsl-sandbox.html  0008-draft-on-publish-versioning.html  0009-fail-fast-env-validation.html  0010-cors-wraps-error-catcher.html  0011-di-container-singleton-factory.html  0012-sqlite-tests-postgres-prod.html  0013-strategy-entrypoint-plugins.html  index.html
docs/: DATA_RETENTION.md  domain-model.md
healthcheck_service/: Dockerfile  health_check.py
keycloak/: Dockerfile  import.sh  realm-template.json  sync_seed_users.sh  update_realm_login_flags.sh
migrations/: env.py
scripts/: check_docs_drift.py  run_e2e.sh  run_load_test.sh  run_unit_tests.sh
src/: app.ts  database.ts  index.ts  swaggerOptions.ts
tests/: conftest.py
(+922 files in other folders)
