[tool.poetry]
name = "GAME"
version = "1.2.047"
description = "GAME (Goals And Motivation Engine)"
authors = ["fvergaracl <fvergaracl@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "0.22.1"
alembic = "1.14.1"
anyio = "3.6.1"
asgiref = "3.11.1"
asyncpg = "0.31.0"
attrs = "23.2.0"
bcrypt = "4.1.2"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.4.7"
click = "8.4.1"
cryptography = "44.0.1"
dependency-injector = "^4.49.0"
ecdsa = "0.19.2"
greenlet = "3.5.1"
h11 = "0.14.0"
httpcore = "0.16.3"
httptools = "0.8.0"
httpx = "0.25.1"
idna = "3.17"
importlib-metadata = "7.0.1"
importlib-resources = "6.1.1"
mako = "1.3.12"
markupsafe = "2.1.4"
packaging = "23.2"
passlib = "1.7.4"
pyasn1 = "^0.6.3"
pycparser = "2.21"
pydantic = "^2.7"
pydantic-settings = "^2.3"
pymysql = "1.2.0"
pyparsing = "3.3.2"
python-dotenv = "1.2.2"
pytz = "2024.1"
pyyaml = "6.0.3"
requests = "2.34.2"
rfc3986 = "1.5.0"
rsa = "4.9.1"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "^2.0.30"
sqlmodel = "^0.0.33"
tomli = "2.4.1"
typing-extensions = "4.15.0"
urllib3 = "2.7.0"
uvloop = "0.22.1"
watchfiles = "0.21.0"
watchgod = "0.8.2"
websockets = "12.0"
zipp = "3.17.0"
toml = "^0.10.2"
uvicorn = "^0.48.0"
prettytable = "^3.11.0"
fastapi = "^0.115.2"
starlette = "^0.38.5"
gunicorn = "^23.0.0"
prometheus-fastapi-instrumentator = "^7.0.0"
graphviz = "^0.21.0"
pyjwt = "^2.13.0"
numpy = "^2.4.6"
sentry-sdk = { extras = ["fastapi"], version = "^2.61.1" }
redis = "^5.0"
python-json-logger = "^2.0.7"
openpyxl = "^3.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-material = "^0.0.36"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2024.2.4"
commitizen = "^3.25.0"
flake8 = "^7.0.0"
black = "^24.4.2"
ruff = "^0.15.15"
isort = "5.13.2"
coverage = "7.14.1"
pytest = "8.0.0"
pytest-asyncio = "0.19.0"
pytest-cov = "4.1.0"
pytest-mock = "3.15.1"
pytest-xdist = "3.8.0"
freezegun = "^1.5.1"
vulture = "^2.16"
eralchemy = "^1.7.0"
fakeredis = "^2.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
release = "cz.cli:main"
